--- a/n2o-samples.cabal
+++ b/n2o-samples.cabal
@@ -32,4 +32,5 @@ executable n2o-sample
               , bytestring
               , text
               , websockets
+              , stm
   default-language: Haskell2010
